[package]
name = "logscroll"
description = "Provide a limited window for logs"
version = "0.2.3"
authors = ["Abin Simon <abinsimon10@gmail.com>"]
edition = "2018"
categories = ["command-line-interface"]
homepage = "https://github.com/meain/logscroll"
repository = "https://github.com/sharkdp/lscolors"
keywords = [
    "cli",
    "linux",
    "terminal",
    "log",
    "scrolling"
]
license = "Apache-2.0"
readme = "README.md"


[dependencies]
atty = "0.2"
terminal_size = "0.1.8"

[[bin]]
name = "logscroll"
path = "src/main.rs"
